fix: 알림 상세의 관련 거래내역 모달 오류 수정